# Prototype

./: chromium_implementation_assessment.md  debug_tabstrip_explanation.md  debug_webui_tabstrip_states.md
chrome/browser/resources/debug_tabstrip/: DEPS  debug_tabstrip.html  debug_tabstrip.js
chrome/browser/ui/webui/: chrome_web_ui_controller_factory.cc
chrome/browser/ui/webui/debug_tabstrip/: BUILD.gn  debug_tabstrip.mojom  debug_tabstrip_handler.cc  debug_tabstrip_handler.h  debug_tabstrip_ui.cc  debug_tabstrip_ui.h  debug_tabstrip_visualizer.cc  debug_tabstrip_visualizer.h
chrome/common/: url_constants.cc  url_constants.h
